# proyecto-c-

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  EntradaConsola.hpp  LICENCIA  README.md  ServicioEstadisticas.hpp  TextoUtils.hpp  app.js  index.html  main.cpp  proyecto redsocial.cpp  styles.css
Frontend/: app
cmake/: GraphicsVendor.cmake
data/: datos.txt
docs/: CASOS_DE_USO.md  COMPILACION_Y_EJECUCION.md  CONTRATO_FUNCIONAL_FRONTEND.md  EJEMPLOS_INTEGRACION_FRONTEND.md  ESPECIFICACION_FRONTEND.md  FLUJOS_DE_PANTALLAS.md  INFORME_FINAL.md  INTEGRACION_FRONTEND.md  MANUAL_TECNICO.md  MANUAL_USUARIO_CONSOLA.md  MATRIZ_FUNCIONALIDADES.md  PRUEBAS_FINALES.md
frontend/: index.html  styles.css
include/rsm/: Config.hpp
include/rsm/application/: ControladorAplicacion.hpp  RedSocialMusical.hpp  ServicioEstadisticas.hpp
include/rsm/domain/: Conexion.hpp  Perfil.hpp  PerfilArtista.hpp  PerfilFanClub.hpp  PerfilOyente.hpp  PerfilProductor.hpp  TipoPerfil.hpp
include/rsm/infrastructure/: PersistenciaTexto.hpp
include/rsm/ui/: EntradaConsola.hpp  MenuConsola.hpp
include/rsm/utils/: TextoUtils.hpp
include/rsm/visualization/: GraficaDTO.hpp  IVisualizadorGraficas.hpp  VisualizadorNoDisponible.hpp
include/soundbridge/: Config.hpp
include/soundbridge/application/: ControladorAplicacion.hpp  ServicioEstadisticas.hpp
include/soundbridge/domain/: Conexion.hpp  Perfil.hpp  PerfilArtista.hpp  PerfilOyente.hpp  TipoPerfil.hpp
include/soundbridge/infrastructure/: PersistenciaTexto.hpp
include/soundbridge/ui/: EntradaConsola.hpp  MenuConsola.hpp
include/soundbridge/utils/: TextoUtils.hpp
include/soundbridge/visualization/: GraficaDTO.hpp  IVisualizadorGraficas.hpp  VisualizadorNoDisponible.hpp
include/soundbridge/web/: ServidorWeb.hpp
src/: main.cpp
src/application/: ControladorAplicacion.cpp  RedSocialMusical.cpp  ServicioEstadisticas.cpp  SoundBridge.cpp
src/domain/: Conexion.cpp  Perfil.cpp  PerfilArtista.cpp  PerfilFanClub.cpp  PerfilOyente.cpp  PerfilProductor.cpp  TipoPerfil.cpp
src/infrastructure/: PersistenciaTexto.cpp
src/ui/: EntradaConsola.cpp  MenuConsola.cpp
src/utils/: TextoUtils.cpp
src/visualization/: VisualizadorNoDisponible.cpp
src/web/: ServidorWeb.cpp
tests/: PruebasFase10.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
